kustomize/components/prometheus-grafana/otel-collector-prom.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector-prom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector-prom
  template:
    metadata:
      labels:
        app: otel-collector-prom
    spec:
      serviceAccountName: otel-collector-prom
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: otel-collector-prom
        image: otel/opentelemetry-collector-contrib:0.150.1@sha256:a516c26968aa1feb5e5fc0562e3338ea13755cb4f373603226bcc4e276374ad0
        args:
        - --config=/conf/collector-config.yaml
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 4317  # OTLP gRPC
        - containerPort: 8889  # Prometheus scrape
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: config
          mountPath: /conf
      volumes:
      - name: config
        configMap:
          name: otel-collector-prom-config
          items:
          - key: collector-config.yaml
            path: collector-config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-prom
spec:
  type: ClusterIP
  selector:
    app: otel-collector-prom
  ports:
  - name: grpc-otlp
    port: 4317
    targetPort: 4317
    protocol: TCP
  - name: http-metrics
    port: 8889
    targetPort: 8889
    protocol: TCP
