kustomize/components/prometheus-grafana/network-policy-otel-collector-prom.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: otel-collector-prom
spec:
  podSelector:
    matchLabels:
      app: otel-collector-prom
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - protocol: TCP
      port: 4317
  - ports:
    - protocol: TCP
      port: 8889
  egress:
  - {}
